# ash

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  Cargo.toml  Makefile  PLAN.md  PLAN.zig.md  README.md  biome.json  build.zig.zon  commitlint.config.js  go.mod  go.sum  lint-staged.config.js  package.json
.archive/internal/scanner/: analyzer.go  scanner.go
.archive/tests/maintenance/: commands_test.go
ash-go/: .golangci.yml  AGENTS.md
ash-go/cmd/ash/: main.go
ash-zig/: AGENTS.md  build.zig  build.zig.zon  package.json
ash-zig/src/: app.zig  config.zig  main.zig  maintenance.zig  utils.zig
ash-zig/src/tui/: ansi.zig  (+3 more)
cmd/ash/: main.go
crates/ash-cli/: Cargo.toml
crates/ash-cli/src/: main.rs
crates/ash-cli/tests/: json-contract.rs
crates/ash-sdk/: Cargo.toml
crates/ash-sdk/examples/: fixture-benchmark.rs
crates/ash-sdk/src/: bench.rs  clean.rs  config.rs  contracts.rs  error.rs  executor.rs  health.rs  inventory.rs  lib.rs  maintenance.rs  paths.rs  planner.rs  policy.rs  trash.rs
internal/app/: app.go  app_test.go  commands.go  messages.go
internal/cleaner/: cleaner.go  cleaner_test.go  trash.go  trash_test.go
internal/config/: config.go  config_test.go  defaults.go
internal/maintenance/: commands.go
internal/safety/: guards.go  guards_test.go  permissions.go
internal/scanner/: analyzer.go  orphan.go  orphan_test.go  scanner.go  scanner_test.go  types.go
internal/tui/: styles.go
pkg/plist/: plist.go  plist_test.go
scripts/: bench-fixtures.sh  bench-scan-full.sh  bench-scan-safe.sh  bench-smoke.sh
src/: main.zig
src/scanner/: homebrew.zig
src/views/: confirm.zig  home.zig  scanning.zig
tests/cleaner/: cleaner_test.go  trash_test.go
tests/config/: config_test.go
tests/scanner/: orphan_test.go  paths_test.go  scanner_test.go
(+54 files in other folders)
