[workspace]
resolver = "3"
members = ["crates/ash-sdk", "crates/ash-cli"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
assert_cmd = "2.1.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
plist = "1.8.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.8.23"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
